[package]
name = "shuttle-ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.26.0"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
thiserror = "2.0.7"
tokio = "1.28.2"
